--- a/ai-reply-verifier-backend/public/admin/index.html
+++ b/ai-reply-verifier-backend/public/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>授权码管理后台</title>
-    <link rel="stylesheet" href="/admin/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -75,6 +75,6 @@
             </table>
         </div>
     </div>
-    <script src="/admin/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html> 
