--- a/ai-reply-verifier-backend/public/admin/index.html
+++ b/ai-reply-verifier-backend/public/admin/index.html
@@ -11,7 +11,7 @@
         <h1>授权码管理后台</h1>
 
         <div id="dashboard" class="card">
-            <h2>仪表盘</h2>
+            <h2 style="text-align:center;letter-spacing:2px;">仪表盘</h2>
             <div class="stats-container">
                 <div class="stat-item">
                     <h3>总授权数</h3>
@@ -58,7 +58,7 @@
             <h2>已有的授权码</h2>
             <table id="licensesTable">
                 <thead>
-                    <tr>
+                    <tr style="font-weight:bold;">
                         <th>授权码</th>
                         <th>酒店名称</th>
                         <th>开始时间</th>
