--- a/ai-reply-verifier-backend/public/admin/index.html
+++ b/ai-reply-verifier-backend/public/admin/index.html
@@ -56,6 +56,10 @@
 
         <div class="card">
             <h2>已有的授权码</h2>
+            <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;gap:10px;">
+                <input type="text" id="searchInput" placeholder="搜索酒店名称或授权码" style="flex:1;padding:6px 10px;border-radius:4px;border:1px solid #ccc;">
+                <div id="pagination" style="display:flex;gap:4px;"></div>
+            </div>
             <table id="licensesTable">
                 <thead>
                     <tr style="font-weight:bold;">
