feat: 管理后台分页栏移至表格下方，支持最多5页展示及前后翻页，体验更佳

--- a/ai-reply-verifier-backend/public/admin/index.html
+++ b/ai-reply-verifier-backend/public/admin/index.html
@@ -58,7 +58,6 @@
             <h2>已有的授权码</h2>
             <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;gap:10px;">
                 <input type="text" id="searchInput" placeholder="搜索酒店名称或授权码" style="flex:1;padding:6px 10px;border-radius:4px;border:1px solid #ccc;">
-                <div id="pagination" style="display:flex;gap:4px;"></div>
             </div>
             <table id="licensesTable">
                 <thead>
@@ -77,6 +76,7 @@
                     <!-- Data will be populated here -->
                 </tbody>
             </table>
+            <div id="pagination" style="display:flex;gap:4px;justify-content:center;margin-top:12px;"></div>
         </div>
     </div>
     <script src="script.js"></script>
