--- a/ai-reply-verifier-backend/public/admin/index.html
+++ b/ai-reply-verifier-backend/public/admin/index.html
@@ -3,40 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>授权码管理后台</title>
+    <title>AI点评回复助手管理系统</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <h1>授权码管理后台</h1>
+        <header class="main-header">
+            <div class="logo">
+                <i class="fas fa-robot"></i>
+                <h1>AI点评回复助手管理系统</h1>
+            </div>
+            <div id="userInfo" class="user-info" style="display:none;">
+                <span id="welcomeText"></span>
+                <button id="logoutBtn" class="logout-btn"><i class="fas fa-sign-out-alt"></i> 退出</button>
+            </div>
+        </header>
 
         <!-- 登录表单（用户名+密码） -->
         <div id="loginContainer" class="login-container card" style="display:none;">
-            <h2>账号登录</h2>
+            <div class="login-header">
+                <i class="fas fa-lock"></i>
+                <h2>账号登录</h2>
+            </div>
             <div class="form-group">
-                <label for="loginUsername">用户名</label>
+                <label for="loginUsername"><i class="fas fa-user"></i> 用户名</label>
                 <input type="text" id="loginUsername" placeholder="请输入用户名">
             </div>
             <div class="form-group">
-                <label for="loginPassword">密码</label>
+                <label for="loginPassword"><i class="fas fa-key"></i> 密码</label>
                 <input type="password" id="loginPassword" placeholder="请输入密码">
             </div>
-            <button id="loginBtn">登录</button>
+            <button id="loginBtn"><i class="fas fa-sign-in-alt"></i> 登录</button>
             <p id="loginMessage" class="error-message"></p>
         </div>
 
         <div id="dashboard" class="card">
-            <h2 style="text-align:center;letter-spacing:2px;">仪表盘</h2>
+            <h2><i class="fas fa-chart-line"></i> 数据概览</h2>
             <div class="stats-container">
                 <div class="stat-item">
+                    <i class="fas fa-key stat-icon"></i>
                     <h3>总授权数</h3>
                     <p id="totalLicenses">0</p>
                 </div>
                 <div class="stat-item">
+                    <i class="fas fa-check-circle stat-icon"></i>
                     <h3>有效授权</h3>
                     <p id="activeLicenses">0</p>
                 </div>
                 <div class="stat-item">
+                    <i class="fas fa-bolt stat-icon"></i>
                     <h3>今日激活</h3>
                     <p id="todayActivations">0</p>
                 </div>
@@ -44,80 +60,117 @@
         </div>
 
         <div class="card">
-            <h2>添加/更新授权码</h2>
+            <h2><i class="fas fa-plus-circle"></i> 添加/更新授权码</h2>
             <form id="licenseForm">
                 <div class="form-group-inline">
                     <div class="form-group">
-                        <label for="licenseKey">授权码</label>
+                        <label for="licenseKey"><i class="fas fa-key"></i> 授权码</label>
                         <input type="text" id="licenseKey" name="licenseKey" required>
                     </div>
-                    <button type="button" id="generateKeyBtn">随机生成</button>
+                    <button type="button" id="generateKeyBtn"><i class="fas fa-random"></i> 随机生成</button>
                 </div>
                 <div class="form-group">
-                    <label for="hotelName">酒店名称</label>
+                    <label for="hotelName"><i class="fas fa-hotel"></i> 酒店名称</label>
                     <input type="text" id="hotelName" name="hotelName" required>
                 </div>
                 <div class="form-group">
-                    <label for="startDate">开始时间</label>
+                    <label for="startDate"><i class="fas fa-calendar-alt"></i> 开始时间</label>
                     <input type="date" id="startDate" name="startDate" required>
                 </div>
                 <div class="form-group">
-                    <label for="expiryDate">到期时间</label>
+                    <label for="expiryDate"><i class="fas fa-calendar-check"></i> 到期时间</label>
                     <input type="date" id="expiryDate" name="expiryDate" required>
                 </div>
-                <button type="submit">保存授权码</button>
+                <button type="submit"><i class="fas fa-save"></i> 保存授权码</button>
             </form>
         </div>
 
         <div class="card">
-            <h2>已有的授权码</h2>
-            <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;gap:10px;">
-                <input type="text" id="searchInput" placeholder="搜索酒店名称或授权码" style="flex:1;padding:6px 10px;border-radius:4px;border:1px solid #ccc;">
+            <h2><i class="fas fa-list"></i> 已有的授权码</h2>
+            <div class="search-container">
+                <i class="fas fa-search search-icon"></i>
+                <input type="text" id="searchInput" placeholder="搜索酒店名称或授权码">
             </div>
-            <table id="licensesTable">
-                <thead>
-                    <tr style="font-weight:bold;">
-                        <th>授权码</th>
-                        <th>酒店名称</th>
-                        <th>开始时间</th>
-                        <th>到期时间</th>
-                        <th>状态</th>
-                        <th>激活次数</th>
-                        <th>最近激活IP</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Data will be populated here -->
-                </tbody>
-            </table>
-            <div id="pagination" style="display:flex;gap:4px;justify-content:center;margin-top:12px;"></div>
+            <div class="table-responsive">
+                <table id="licensesTable">
+                    <thead>
+                        <tr>
+                            <th><i class="fas fa-key"></i> 授权码</th>
+                            <th><i class="fas fa-hotel"></i> 酒店名称</th>
+                            <th><i class="fas fa-calendar-alt"></i> 开始时间</th>
+                            <th><i class="fas fa-calendar-check"></i> 到期时间</th>
+                            <th><i class="fas fa-info-circle"></i> 状态</th>
+                            <th><i class="fas fa-sync"></i> 激活次数</th>
+                            <th><i class="fas fa-network-wired"></i> 最近激活IP</th>
+                            <th><i class="fas fa-cogs"></i> 操作</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Data will be populated here -->
+                    </tbody>
+                </table>
+            </div>
+            <div id="pagination" class="pagination"></div>
         </div>
 
         <div id="accountCard" class="card" style="display:none;">
-            <h2>账号管理（仅管理员可见）</h2>
-            <form id="addAccountForm" style="display:flex;gap:8px;align-items:center;">
-                <input type="text" id="newAccountUsername" placeholder="用户名" required style="width:120px;">
-                <input type="text" id="newAccountName" placeholder="代理商名称" required style="width:120px;">
-                <input type="password" id="newAccountPassword" placeholder="密码" required style="width:120px;">
-                <button type="submit">添加代理商</button>
+            <h2><i class="fas fa-users-cog"></i> 账号管理（仅管理员可见）</h2>
+            <form id="addAccountForm" class="add-account-form">
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="newAccountUsername"><i class="fas fa-user"></i> 用户名</label>
+                        <input type="text" id="newAccountUsername" placeholder="用户名" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="newAccountName"><i class="fas fa-building"></i> 合作伙伴名称</label>
+                        <input type="text" id="newAccountName" placeholder="合作伙伴名称" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="newAccountPassword"><i class="fas fa-lock"></i> 密码</label>
+                        <input type="password" id="newAccountPassword" placeholder="密码" required>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit"><i class="fas fa-user-plus"></i> 添加合作伙伴</button>
+                    </div>
+                </div>
             </form>
-            <table id="accountsTable" style="width:100%;margin-top:10px;">
-                <thead><tr><th>用户名</th><th>名称</th><th>角色</th><th>创建时间</th><th>操作</th></tr></thead>
-                <tbody></tbody>
-            </table>
+            <div class="table-responsive">
+                <table id="accountsTable">
+                    <thead>
+                        <tr>
+                            <th><i class="fas fa-user"></i> 用户名</th>
+                            <th><i class="fas fa-building"></i> 名称</th>
+                            <th><i class="fas fa-user-tag"></i> 角色</th>
+                            <th><i class="fas fa-calendar-plus"></i> 创建时间</th>
+                            <th><i class="fas fa-cogs"></i> 操作</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
         </div>
 
         <div id="logsCard" class="card" style="margin-top:24px;display:none;">
-            <h2 style="text-align:center;letter-spacing:2px;">操作日志</h2>
-            <div id="logsTableContainer">
-                <table id="logsTable" style="width:100%;margin-top:10px;">
-                    <thead><tr><th>时间</th><th>操作人</th><th>类型</th><th>详情</th></tr></thead>
+            <h2><i class="fas fa-history"></i> 操作日志</h2>
+            <div id="logsTableContainer" class="table-responsive">
+                <table id="logsTable">
+                    <thead>
+                        <tr>
+                            <th><i class="fas fa-clock"></i> 时间</th>
+                            <th><i class="fas fa-user"></i> 操作人</th>
+                            <th><i class="fas fa-tag"></i> 类型</th>
+                            <th><i class="fas fa-info-circle"></i> 详情</th>
+                        </tr>
+                    </thead>
                     <tbody></tbody>
                 </table>
-                <div id="logsPagination" style="display:flex;gap:4px;justify-content:center;margin-top:12px;"></div>
+                <div id="logsPagination" class="pagination"></div>
             </div>
         </div>
+
+        <footer class="main-footer">
+            <p>&copy; 2025 AI点评回复助手管理系统 | 技术支持：Cursor AI</p>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
