--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>授权码管理后台</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <base href="./">
 </head>
 <body>
     <!-- 密码输入模态框 -->
@@ -64,6 +65,6 @@
         </main>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html> 
