--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=/ai-reply-verifier-backend/public/admin/">
-  <title>重定向到管理后台</title>
+  <meta http-equiv="refresh" content="0; url=./admin/">
+  <title>重定向到管理页面</title>
   <script>
-    window.location.href = "/ai-reply-verifier-backend/public/admin/";
+    // 根据当前域名确定正确的重定向路径
+    const currentPath = window.location.pathname;
+    const basePath = currentPath.endsWith('/') ? currentPath : currentPath + '/';
+    window.location.href = basePath + 'admin/';
   </script>
 </head>
 <body>
-  <p>如果页面没有自动跳转，请<a href="/ai-reply-verifier-backend/public/admin/">点击这里</a>访问管理后台。</p>
+  <p>如果您没有被自动重定向，请<a href="./admin/">点击这里</a>访问管理页面。</p>
 </body>
 </html> 
