--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=admin/">
+  <meta http-equiv="refresh" content="0; url=/admin/">
   <title>重定向到管理页面</title>
 </head>
 <body>
-  <p>如果您没有被自动重定向，请<a href="admin/">点击这里</a>访问管理页面。</p>
+  <p>如果您没有被自动重定向，请<a href="/admin/">点击这里</a>访问管理页面。</p>
 </body>
 </html> 
