--- a/404.html
+++ b/404.html
@@ -2,28 +2,23 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>页面未找到 - AI回复点评助手</title>
+  <title>页面未找到 - AI点评回复助手管理系统</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-      background: #f8f9fa;
-    }
-    .container {
-      max-width: 600px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      line-height: 1.6;
+      color: #333;
+      max-width: 650px;
       margin: 0 auto;
-      background: white;
-      padding: 30px;
-      border-radius: 5px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      padding: 2rem;
+      text-align: center;
     }
     h1 {
-      color: #333;
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
     }
     p {
-      color: #666;
-      margin-bottom: 20px;
+      margin-bottom: 1.5rem;
     }
     a {
       color: #0366d6;
@@ -35,10 +30,8 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>404 - 页面未找到</h1>
-    <p>您访问的页面不存在或已被移动。</p>
-    <p><a href="/">返回首页</a></p>
-  </div>
+  <h1>404 - 页面未找到</h1>
+  <p>抱歉，您访问的页面不存在。</p>
+  <p>您可以<a href="/">返回首页</a>或检查URL是否正确。</p>
 </body>
 </html> 
