--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=admin/">
+  <script>
+    // 动态处理重定向路径
+    var path = window.location.hostname.includes('github.io') ? 
+      '/repository-name-v2/admin/' : 
+      '/admin/';
+    window.location.href = path;
+  </script>
   <title>重定向到管理页面</title>
 </head>
 <body>
