--- a/ai-reply-verifier-backend/public/admin/index.html
+++ b/ai-reply-verifier-backend/public/admin/index.html
@@ -128,19 +128,19 @@
 
         <div id="accountCard" class="card" style="display:none;">
             <h2><i class="fas fa-users-cog"></i> 账号管理（仅管理员可见）</h2>
-            <form id="addAccountForm" class="modern-form">
+            <form id="addAccountForm" class="modern-form" autocomplete="off">
                 <div class="form-row">
                     <div class="form-group">
                         <label for="newAccountUsername"><i class="fas fa-user"></i> 用户名</label>
-                        <input type="text" id="newAccountUsername" placeholder="用户名" required>
+                        <input type="text" id="newAccountUsername" name="partner_username" placeholder="用户名" autocomplete="off" required>
                     </div>
                     <div class="form-group">
                         <label for="newAccountName"><i class="fas fa-building"></i> 合作伙伴名称</label>
-                        <input type="text" id="newAccountName" placeholder="合作伙伴名称" required>
+                        <input type="text" id="newAccountName" name="partner_name" placeholder="合作伙伴名称" autocomplete="off" required>
                     </div>
                     <div class="form-group">
                         <label for="newAccountPassword"><i class="fas fa-lock"></i> 密码</label>
-                        <input type="password" id="newAccountPassword" placeholder="密码" required>
+                        <input type="password" id="newAccountPassword" name="partner_password" placeholder="密码" autocomplete="new-password" required>
                     </div>
                 </div>
                 <div class="form-actions">
