使用Cloudflare Worker作为API代理解决中国大陆网络访问问题

--- a/ai-reply-verifier-backend/public/admin/index.html
+++ b/ai-reply-verifier-backend/public/admin/index.html
@@ -7,7 +7,7 @@
     <script>
         // 动态设置base标签
         if (window.location.hostname.includes('github.io')) {
-            document.write('<base href="/ai-reply-verifier/">');
+            document.write('<base href="/repository-name-v2/">');
         }
     </script>
     <link rel="stylesheet" href="style.css">
